--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Developers Student Club NUS Official Website! Click here to find out more about us and how we #techforgood!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/dscnuslogo.png" />
     <!--
